[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bancho.py"
version = "0.1.1"
description = "Python library for interacting with Bancho, osu!'s chat server"
requires-python = ">=3.10"
dependencies = [
    "pyee>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["bancho"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: requires live Bancho IRC credentials"]
