[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bancho.py"
version = "0.1.2.a"
description = "Python library for interacting with Bancho, osu!'s chat server"
requires-python = ">=3.10"

dependencies = [
    "pyee>=11.0.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["bancho"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["integration: requires live Bancho IRC credentials"]
